redesignedoj/files_usersubmissions/1/submission.txt
2_PROB7_code.cpp: In function ‘int main()’:
2_PROB7_code.cpp:5:12: error: expected ‘}’ at end of input
    5 |   return 0;
      |            ^
2_PROB7_code.cpp:3:11: note: to match this ‘{’
    3 | int main(){
      |           ^
